--- a/layouts/foot.html
+++ b/layouts/foot.html
@@ -1,4 +1,4 @@
-<!-- This line should go where you want to put your button -->
+<!-- This line should go where you want to put your button
 <div class="money-button"
   data-to="bitcoincash:qzmh7eqswe5n87j4hh4ajrc05eukgrfeccz0sxq33y"
   data-amount="3"
@@ -9,6 +9,6 @@
   data-button-id="1537167036238"
   data-button-data="{}"
   data-type="buy"
-></div>
+></div> -->
 <!-- This line can go anywhere -->
-<script src="https://api.moneybutton.com/moneybutton.js"></script>
+<!-- <script src="https://api.moneybutton.com/moneybutton.js"></script> -->
