--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -6,5 +6,5 @@
   {{ partial "social-follow.html" . }}
   </div>
   <!-- This line can go anywhere -->
-  <script src="https://api.moneybutton.com/moneybutton.js"></script>
+  <!-- <script src="https://api.moneybutton.com/moneybutton.js"></script> -->
 </footer>
